Java - Wizards and Warriors 2